--- a/Pealeht.html
+++ b/Pealeht.html
@@ -11,4 +11,5 @@
         <a href="hinnakiri.html"><button>HINNAKIRI</button></a>
         <a href=""><button>BRONEERI AEG</button></a>
     </p>
+    <img src="room.jpeg" alt="room">
 </body>
